[gd_scene load_steps=2 format=3 uid="uid://bj2wsuinrftmo"]

[ext_resource type="Script" path="res://src/scripts/menu.gd" id="1_ccko7"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ccko7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -207.0
offset_top = -151.0
offset_right = -69.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="ControlButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Controls"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit
"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ControlButton" to="." method="_on_control_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
